--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,17 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -65,4 +76,15 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+/*TODO: Faire en sorte que le footer soit en bas de la page*/
+.footer {
+  position: fixed;
+  padding: 20px;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 1);
 }
