--- a/src/assets/style/mainmenu.css
+++ b/src/assets/style/mainmenu.css
@@ -1,8 +1,16 @@
+.main-menu {
+    width: 100vw;
+    display: flex;
+    position: absolute;
+    top: 3%;
+}
+
 .main-menu ul {
     list-style: none;
-    gap: 20px;
+    gap: 57px;
     display: flex;
     flex-direction: row;
+    margin-left: 55%;
 }
 
 a {
@@ -11,4 +19,11 @@ a {
 
 a.active {
     text-decoration: underline;
+    color: black;
+}
+
+.main-menu li {
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 24px;
 }
